[package]
authors = ["Max Willsey <me@mwillsey.com>"]
categories = ["data-structures"]
description = "An implementation of egraphs"
edition = "2018"
keywords = ["e-graphs"]
license = "MIT"
name = "egg"
readme = "README.md"
repository = "https://github.com/egraphs-good/egg"
version = "0.9.5"

[dependencies]
env_logger = { version = "0.11.3", default-features = false }
fxhash = "0.2.1"
indexmap = "2.2.6"
log = "0.4.17"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
symbol_table = { version = "0.3.0", features = ["global"] }
num-bigint = "0.4"
num-traits = "0.2"

[features]
# forces the use of indexmaps over hashmaps
# deterministic = []